[gd_scene load_steps=24 format=2]

[ext_resource path="res://Boxes/PlayerMapDetection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level.gd" type="Script" id=2]
[ext_resource path="res://Boxes/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Platforms/Platform.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Environment/Clouds/Clouds2.tscn" type="PackedScene" id=5]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Text.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/tileset.tres" type="TileSet" id=9]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://World/Environment/Clouds/Clouds.tscn" type="PackedScene" id=11]
[ext_resource path="res://Effect/WorldEnvironment.tscn" type="PackedScene" id=12]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://World/Background.tscn" type="PackedScene" id=14]
[ext_resource path="res://Platforms/CreatePlatforms/AirPlatform/GrowPlatformAir.tscn" type="PackedScene" id=15]
[ext_resource path="res://World/Environment/Advertising/Advertising01/Advertisement1.tscn" type="PackedScene" id=16]
[ext_resource path="res://World/Environment/Advertising/Advertising02/Advertisement2.tscn" type="PackedScene" id=17]
[ext_resource path="res://World/Environment/Fountain/Fountain.tscn" type="PackedScene" id=18]
[ext_resource path="res://World/Environment/FakeTree/Tree1.tscn" type="PackedScene" id=19]
[ext_resource path="res://World/Environment/FakeTree/Tree2.tscn" type="PackedScene" id=20]
[ext_resource path="res://World/Environment/Advertising/Advertising03/Advertisement3.tscn" type="PackedScene" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2031.49, 577.426 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1942.87, 182.239 )

[node name="Level8" type="Node2D"]
script = ExtResource( 2 )
enemies = 3

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1892.0
margin_top = -9.99661
margin_right = 3768.0
margin_bottom = 743.003
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 14 )]
position = Vector2( 948.348, 373.169 )
scale = Vector2( 1.50727, 0.973759 )
region_rect = Rect2( 0, 0, 1270, 768 )

[node name="CloudBG" parent="." instance=ExtResource( 11 )]
position = Vector2( -7.70233, 648 )
scale = Vector2( 1.006, 1 )
region_rect = Rect2( 0, 0, 3740, 86 )

[node name="CloudBG2" parent="." instance=ExtResource( 5 )]
position = Vector2( -8, 660.622 )
scale = Vector2( 1.00873, 1 )
region_rect = Rect2( 0, 77, 3730, 73 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="Text" parent="CanvasLayer" instance=ExtResource( 8 )]
margin_left = 0.793701
margin_top = -1.5874
margin_right = 0.793701
margin_bottom = -1.5874

[node name="TextLabel" parent="CanvasLayer/Text" index="3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -576.259
margin_top = 191.738
margin_right = 543.741
margin_bottom = 331.738
custom_colors/default_color = Color( 0.0470588, 0.0509804, 0.0588235, 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
cell_size = Vector2( 32, 16 )
collision_layer = 6
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65418, 0, 0, 65535, 0, 0, 118, 0, 0, 131071, 0, 0, 65654, 0, 0, 196607, 0, 0, 131190, 0, 0, 262143, 0, 0, 196726, 0, 0, 327679, 0, 0, 262262, 0, 0, 393215, 0, 0, 327798, 0, 0, 458751, 0, 0, 393334, 0, 0, 524287, 0, 0, 458870, 0, 0, 589823, 0, 0, 524406, 0, 0, 655359, 0, 0, 589942, 0, 0, 720895, 0, 0, 655478, 0, 0, 786431, 0, 0, 720931, 0, 0, 720942, 0, 0, 721014, 0, 0, 851967, 0, 0, 786550, 0, 0, 917503, 0, 0, 852086, 0, 0, 983039, 0, 0, 917618, 0, 0, 917619, 0, 0, 917620, 0, 0, 917621, 0, 0, 917622, 0, 0, 1048575, 0, 0, 983131, 0, 0, 983158, 0, 0, 1114111, 0, 0, 1048694, 0, 0, 1179647, 0, 0, 1114141, 0, 0, 1114230, 0, 0, 1245183, 0, 0, 1179766, 0, 0, 1310718, 0, 0, 1245302, 0, 0, 1376254, 0, 0, 1310794, 0, 0, 1310795, 0, 0, 1310822, 0, 0, 1310838, 0, 0, 1441790, 0, 0, 1376261, 0, 0, 1376311, 0, 0, 1376319, 0, 0, 1376358, 0, 0, 1376359, 0, 0, 1376360, 0, 0, 1376361, 0, 0, 1376362, 0, 0, 1376363, 0, 0, 1376364, 0, 0, 1376365, 0, 0, 1376366, 0, 0, 1376367, 0, 0, 1376368, 0, 0, 1376369, 0, 0, 1376370, 0, 0, 1376371, 0, 0, 1376372, 0, 0, 1376373, 0, 0, 1376374, 0, 0, 1507327, 0, 0, 1441792, 0, 0, 1441805, 0, 0, 1441910, 0, 0, 1572863, 0, 0, 1507362, 0, 0, 1507446, 0, 0, 1638399, 0, 0, 1572982, 0, 0, 1703935, 0, 0, 1638450, 0, 0, 1638454, 0, 0, 1638518, 0, 0, 1769471, 0, 0, 1704054, 0, 0, 1835007, 0, 0, 1769480, 0, 0, 1769590, 0, 0, 1900543, 0, 0, 1835037, 0, 0, 1835126, 0, 0, 1966079, 0, 0, 1900662, 0, 0, 2031615, 0, 0, 1966198, 0, 0, 2097151, 0, 0, 2031734, 0, 0, 2162687, 0, 0, 2097270, 0, 0, 2228223, 0, 0, 2162720, 0, 0, 2162806, 0, 0, 2293759, 0, 0, 2228342, 0, 0, 2359295, 0, 0, 2293878, 0, 0, 2424831, 0, 0, 2359414, 0, 0, 2490367, 0, 0, 2424856, 0, 0, 2424861, 0, 0, 2424950, 0, 0, 2555903, 0, 0, 2490393, 0, 0, 2490394, 0, 0, 2490395, 0, 0, 2490396, 0, 0, 2490486, 0, 0, 2621439, 0, 0, 2556022, 0, 0, 2686975, 0, 0, 2621558, 0, 0, 2752511, 0, 0, 2687094, 0, 0, 2818047, 0, 0, 2752630, 0, 0, 2883583, 0, 0, 2818166, 0, 0, 2949119, 0, 0, 2883702, 0, 0, 3014655, 0, 0, 2949238, 0, 0, 3080191, 0, 0, 3014774, 0, 0, 3145727, 0, 0, 3080310, 0, 0, 3211263, 0, 0, 3145846, 0, 0, 3276799, 0, 0, 3211382, 0, 0, 3276918, 0, 0 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 10 )]
position = Vector2( 6.32257, 346.933 )

[node name="Enemies" type="YSort" parent="YSort"]

[node name="Enemy01" parent="YSort/Enemies" instance=ExtResource( 13 )]
position = Vector2( 893.081, 593.71 )

[node name="Enemy02" parent="YSort/Enemies" instance=ExtResource( 13 )]
position = Vector2( 3359.9, 321.471 )

[node name="Enemy03" parent="YSort/Enemies" instance=ExtResource( 13 )]
position = Vector2( 3440.07, 312.74 )

[node name="Fire" type="YSort" parent="YSort"]

[node name="Trees" type="YSort" parent="YSort"]

[node name="Tree" parent="YSort/Trees" instance=ExtResource( 19 )]
position = Vector2( 941.252, 414.532 )
frame = 0

[node name="Tree2" parent="YSort/Trees" instance=ExtResource( 20 )]
position = Vector2( 1617.51, 373.95 )
frame = 5

[node name="Tree3" parent="YSort/Trees" instance=ExtResource( 19 )]
position = Vector2( 2918, 206 )
frame = 7

[node name="Tree4" parent="YSort/Trees" instance=ExtResource( 20 )]
position = Vector2( 3561.76, 308.694 )
frame = 2

[node name="Tree5" parent="YSort/Trees" instance=ExtResource( 20 )]
position = Vector2( 3602.96, 309.443 )
frame = 4

[node name="Tree6" parent="YSort/Trees" instance=ExtResource( 20 )]
position = Vector2( 3522.8, 309.443 )
frame = 2

[node name="Tree7" parent="YSort/Trees" instance=ExtResource( 20 )]
position = Vector2( 3480.85, 308.694 )
frame = 0

[node name="Grass" type="YSort" parent="YSort"]

[node name="Fountain" type="YSort" parent="YSort"]

[node name="Fountain" parent="YSort/Fountain" instance=ExtResource( 18 )]
position = Vector2( 2400.45, 307.974 )
frame = 3

[node name="Platforms" type="YSort" parent="YSort"]

[node name="EndMapPlatform" parent="YSort/Platforms" instance=ExtResource( 4 )]
position = Vector2( 3656, 288 )
rotation = 1.5708

[node name="CollisionShape2D" parent="YSort/Platforms/EndMapPlatform" index="1"]
one_way_collision = false

[node name="GrowPlatformGround" parent="YSort/Platforms" instance=ExtResource( 15 )]
position = Vector2( 2150.02, 337.698 )

[node name="GrowPlatformGround2" parent="YSort/Platforms" instance=ExtResource( 15 )]
position = Vector2( 2514.16, 245.614 )

[node name="GrowPlatformGround3" parent="YSort/Platforms" instance=ExtResource( 15 )]
position = Vector2( 2629.86, 166.218 )

[node name="GrowPlatformGround4" parent="YSort/Platforms" instance=ExtResource( 15 )]
position = Vector2( 3040.55, 320.6 )

[node name="Ad1" type="YSort" parent="YSort"]

[node name="Advertisement1" parent="YSort/Ad1" instance=ExtResource( 16 )]
position = Vector2( 1902.11, 279.51 )
frame = 6

[node name="Advertisement2" parent="YSort/Ad1" instance=ExtResource( 16 )]
position = Vector2( 1962.79, 415.856 )
frame = 3

[node name="Advertisement3" parent="YSort/Ad1" instance=ExtResource( 16 )]
position = Vector2( 2007.74, 252.541 )

[node name="Advertisement4" parent="YSort/Ad1" instance=ExtResource( 16 )]
position = Vector2( 1132.67, 214.415 )
frame = 6

[node name="Advertisement5" parent="YSort/Ad1" instance=ExtResource( 16 )]
position = Vector2( 3422.79, 292.63 )
frame = 6

[node name="Ad2" type="YSort" parent="YSort"]

[node name="Advertisement2" parent="YSort/Ad2" instance=ExtResource( 17 )]
position = Vector2( 1849.67, 352.178 )
frame = 6

[node name="Advertisement3" parent="YSort/Ad2" instance=ExtResource( 17 )]
position = Vector2( 1794.23, 319.215 )
frame = 2

[node name="Advertisement4" parent="YSort/Ad2" instance=ExtResource( 17 )]
position = Vector2( 2034.71, 317.717 )
frame = 0

[node name="Advertisement5" parent="YSort/Ad2" instance=ExtResource( 17 )]
position = Vector2( 1963.54, 266.026 )
frame = 1

[node name="Advertisement6" parent="YSort/Ad2" instance=ExtResource( 17 )]
position = Vector2( 272.832, 409.577 )

[node name="Ad3" type="YSort" parent="YSort"]

[node name="Advertisement3" parent="YSort/Ad3" instance=ExtResource( 21 )]
position = Vector2( 1860.16, 297.49 )
frame = 1

[node name="Advertisement4" parent="YSort/Ad3" instance=ExtResource( 21 )]
position = Vector2( 1922.34, 360.419 )
frame = 6

[node name="Advertisement5" parent="YSort/Ad3" instance=ExtResource( 21 )]
position = Vector2( 1876.64, 231.564 )
frame = 0

[node name="Advertisement6" parent="YSort/Ad3" instance=ExtResource( 21 )]
position = Vector2( 1910.35, 397.877 )
frame = 0

[node name="PlayerMapDetection3" parent="." instance=ExtResource( 1 )]
position = Vector2( 177.992, 232.614 )
page = 23

[node name="EndMap" parent="." instance=ExtResource( 1 )]
position = Vector2( 3774.87, 232.772 )
level = 9

[node name="WorldEnvironment" parent="." instance=ExtResource( 12 )]

[node name="Boundries" parent="." instance=ExtResource( 3 )]
position = Vector2( 1879.48, 1292.41 )
collision_mask = 128

[node name="CollisionShape2D" parent="Boundries" index="0"]
position = Vector2( -0.616943, -1.60974 )
shape = SubResource( 1 )

[node name="EnemieBoundries" parent="." instance=ExtResource( 3 )]
position = Vector2( 1872.42, 871.156 )
collision_mask = 32
damage = 2

[node name="CollisionShape2D" parent="EnemieBoundries" index="0"]
position = Vector2( 2.98755, 0.392761 )
shape = SubResource( 2 )
[connection signal="player_died" from="YSort/Player" to="." method="_on_Player_player_died"]
[connection signal="enemie_died" from="YSort/Enemies/Enemy01" to="." method="_on_Enemy_enemie_died"]
[connection signal="enemie_died" from="YSort/Enemies/Enemy02" to="." method="_on_Enemy_enemie_died"]
[connection signal="enemie_died" from="YSort/Enemies/Enemy03" to="." method="_on_Enemy_enemie_died"]
[connection signal="player_entered" from="PlayerMapDetection3" to="." method="_on_PlayerMapDetection_player_entered"]
[connection signal="player_entered" from="EndMap" to="." method="_on_EndMap_player_entered"]
[connection signal="area_entered" from="Boundries" to="Boundries" method="_on_Boundries_area_entered"]

[editable path="CanvasLayer/Text"]

[editable path="YSort/Platforms/EndMapPlatform"]

[editable path="Boundries"]

[editable path="EnemieBoundries"]
